[package]
name = "civ-6-dlc-installer"
version = "0.1.0"
edition = "2021"

[dependencies]
console = "0.15"
futures-util = "0.3"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["stream"] }
sevenz-rust = { version = "0.6", features = ["aes256"] }
steamlocate = "1.2.1"
thiserror = "1.0"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
